template.css
/* ... */
#content-wrap h2 {
    font-size: 24px !important;
    margin: 0px auto 20px;
    font-weight: bold;
}
#content-wrap h3,
.related_pages .title {
    font-size: 20px;
    margin-bottom: 15px;
}
#content-wrap h4 {
    color: <%= primaryDarkColor %>;
    font-family: sans-serif;
    font-size: 20px;
}
#content-wrap ul,
#content-wrap ol {
    padding: 0px 20px;
}

.home h2,
.home p.home-section-title {
    font: bold 28px/1.3em sans-serif;
    text-transform: uppercase;
    color: <%= primaryDarkColor %>;
    text-align: center;
    margin-bottom: 30px;
}

.breakout p,
.breakout ul,
.breakout ol {
    font-size: 14px;
    line-height: 20px;
}
@media screen and (max-width: 640px) {
    h1, p.home-section-title {
        font-size: 22px;
        margin-bottom: 20px;
    }
    h2 {
        font-size: 18px;
    }
    h3, h4 {
        font-size: 16px;
    }
}

/**------------------------------------------- Header -------------------------------------------*/

#header {
    background: #fff;
    padding: 20px 0px;
}
#logo img {
    max-height: 150px;
}
#contact {
    position: relative;
}
#phone {
    font-family: 'Roboto', sans-serif;
    position: relative;
}
#phone > a {
    color: <%= primaryBrightColor %>;
    line-height: 100%;
    font-weight: 700;
    font-size: 36px;
    position: absolute;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    top: 50%;
    
}
#header-btn a.button {
    text-transform: none;
    border-radius: 30px;
    padding: 10px 20px;
    margin: 10px auto 0px;
    line-height: 100%;
    font-weight: 400;
    font-size: 16px;
    width: auto !important;
}
#header-btn a.button span {
    font-weight: 700;
}
#header-service-wrap {
    margin-bottom: 20px;
}
#header-service-area p {
    display: block;
    line-height: 1.2em;
    text-align: right;
    color: #555;
    margin-bottom: 0px;
    font-size: 16px;
    font-weight: 400;
    font-style: italic;
}
#header-service-area p:hover {
    color: #353535;
    text-decoration: underline;
}
.opensign {
    float: left;
    background: <%= primaryBrightColor %>;
    border-radius: 7px;
    padding: 5px;
    margin: -5px 10px 0px 0px;
}
.opensign span {
    font: 400 16px/100% sans-serif;
    text-transform: uppercase;
    padding: 8px 10px;
    display: block;
    border: 1px solid #FFFFFF;
    border-radius: 3px;
    color: #ffffff;
}
@media screen and (min-width: 1025px) {
    #logo a {
        display: block;
        position: absolute;
        -webkit-transform: translateY(-50%);
        transform: translateY(-50%);
        top: 50%;
    }
    #phone {
        text-align: right;
        height: 55px;
    }
    #phone > a {
        right: 0;
    }
    #header-btn a.button {
        float: right;
    }
    p#header-service-area {
        position: absolute;
        width: 280px;
        right: 0;
        top: 90px;
    }
}
@media screen and (max-width: 1024px) {
    #logo {
        margin-bottom: 25px;
        text-align: center;
    }
    #phone {
        text-align: center;
        margin: 15px auto;
    }
    #phone a {
        -webkit-transform: none;
        transform: none;
        display: inline-block;
        position: relative;
        left: auto;
        top: auto;
        font-size: 28px;
        width: 300px;
    }

    #header-btn {
        text-align: center;
    }
    #header-btn a.button {
        display: inline-block;
    }
    #header-service-wrap {
        margin-bottom: 5px;
    }
    #header-service-area p {
        text-align: center;
        font-size: 14px;
    }
     .opensign {
        margin: -2px 5px 0px 0px;
    }
    .opensign span{
        font-size: 12px;
    }

}

/**------------------------------------------- TOP Nav Styles -------------------------------------------**/
#nav-bar,
.contain-to-grid {
    background: <%= primaryDarkColor %>;
}

ul#top-nav-list > li:hover {
    background: <%= primaryBrightColor %>;
}
/* Top Nav Links */
ul#top-nav-list > li a {
    font-family: sans-serif;
    font-size: 16px;
    line-height: 1.4em;
    text-transform: uppercase;
    color: #fff;
}
ul#top-nav-list > li:hover > a {
    color: #fff;
}

/* Top Nav Free Estimate Link */
ul#top-nav-list > li.quote {
    background: #EDEDED;
}
ul#top-nav-list > li.quote a {
    color: <%= primaryBrightColor %>;
}
ul#top-nav-list > li.quote:hover {
    background-color: #EB0209;
}
@media screen and (max-width: 640px){
    ul#top-nav-list > li.quote a {
        background-color: <%= primaryBrightColor %>;
    }
}
/* Mega Nav Links */
ul#top-nav-list ul.m-menu a {
    color: #353535;
}
ul#top-nav-list ul.m-menu ul a:hover {
    color: <%= primaryBrightColor %>;
    text-decoration: none !important;
}

/* Top Banner Sticky Phone # and Button*/
.phone_link {
  font-size: 26px;
  font-weight: bold;
}
#phone-sticky a.phone_link span,
#phone-sticky a.phone_link:hover span {
	color: <%= primaryBrightColor %>;
}
#phone-sticky a.button {
    background: <%= primaryBrightColor %>;
}
#phone-sticky a.button:hover {
    background: <%= primaryDarkColor %>;
}
.button:visited {
    color: #fff;
}
/* Sticky Logo */
#logo-sticky a {
  background-image: url('<%- logo %>');
}
/*----------------------------------------- Main Message ---------------------------------- */
#main-message {
	background-image:url('<%- mainMessageImage %>');
  width: 100%;
  background-size: cover;
  background-position: center 0;
  text-align: center;
  border-top: 4px solid <%= primaryBrightColor %>;
  border-bottom: 5px solid <%= primaryDarkColor %>;
  background-attachment: fixed;
  background-repeat: no-repeat;
  overflow: hidden;
}
#main-message > .row {
    height: 350px;
    position: relative;
}
.hero-txt {
    margin: 0px auto;
    position: absolute;
    -webkit-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);
    top: 50%;
    left: 50%;
}
/* ... */

